# cta-tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: build_track.mjs
src/: ai.rs  app.rs  cta.rs  main.rs  notify.rs  store.rs  track.json  track.rs  tts.rs  ui.rs
